cabal-version:      2.4
name:               monad-transformer-sample
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:
author:             akthrms
maintainer:         akt.hrms@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  exposed-modules:  Transformers

  -- Modules included in this library but not exported.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , base        ^>=4.14.1.0
    , containers
    , mtl

  hs-source-dirs:   src
  default-language: Haskell2010
